# READLOG

./: .gitignore  LICENSE  README  README.md
DOCS/: Listing.MD  Roadmap.MD
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a374fc87db29_create_users_and_posts_tables.py
backend/app/: db.py  main.py
backend/app/database/: base.py  db.py
backend/app/models/: books.py  quotes.py  reading_notes.py  reading_reminders.py  user_books.py  users.py
backend/app/repositories/: users.py
backend/app/routers/: auth.py  users.py
backend/app/schemas/: token.py  user.py
mobile/: package-lock.json  package.json
mobile/app/: _layout.tsx  auth.tsx  login.tsx  sign-in.tsx  sign-up.tsx
mobile/app/(tabs)/: _layout.tsx  about.tsx  index.tsx  profile.tsx
mobile/auth/: ctx.tsx  splash.tsx
mobile/components/: label.tsx
mobile/constants/: theme.ts
